# discinstock_api

./: .gitignore  .justfile  README.rst  pyproject.toml
.github/workflows/: main.yml
app/: application.py  asgi.py  brand.py  config.py  database.py  main.py  retailer_default_data.json
app/dependencies/: query_parameters.py
app/exceptions/: authentication_exceptions.py  disc_exceptions.py
app/models/: disc.py  pyobjectid.py  retailer.py  user.py
app/routers/: authorization.py  brands.py  discs.py  retailers.py  root.py
app/services/: auth_service.py  brand_service.py  disc_service.py  retailer_service.py
app/util/: camelize.py  docker_secret.py  link_header.py  pagination.py  validate_token.py
discinstock_api/: database.py  main.py
docker/: Dockerfile  gunicorn_conf.py
tests/: test_discinstock_api.py
