[tool.poetry]
name = "discinstock_api"
version = "1.0.13"
description = "API for discinstock.no. Currently serving discs endpoint with search functionality"
authors = ["Sondre William Kaldhussæter-Knutsen <knutsensondre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pymongo = "^3.11.3"
motor = "^2.4.0"
python-dotenv = "^0.19.1"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
cryptography = "^35.0.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = { version = "^6.0.2", extras = ["toml"]}
black = "^21.9b0"
isort = { version = "^5.9.3", extras = ["pyproject"]}
requests = "^2.23.0"

[tool.poetry.scripts]
start = "app.app:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"