[tool.poetry]
name = "discinstock_api"
version = "1.0.15"
description = "API for discinstock.no. Currently serving discs endpoint with search functionality"
authors = ["Sondre William Kaldhussæter-Knutsen <knutsensondre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

uvicorn = "^0.20.0"
python-dotenv = "^0"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
bcrypt = "^4"
black = "^23.1.0"
motor = "^3.1"
fastapi = "^0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}

[tool.poetry.dev-dependencies]
pytest = "^7"
coverage = { version = "^7.0.0", extras = ["toml"]}
isort = { version = "^5.9.3", extras = ["pyproject"]}
requests = "^2.23.0"

[tool.poetry.scripts]
start = "app.app:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"