[tool.poetry]
name = "discinstock_api"
version = "1.0.14"
description = "API for discinstock.no. Currently serving discs endpoint with search functionality"
authors = ["Sondre William Kaldhussæter-Knutsen <knutsensondre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pymongo = "^4.3.3"
motor = "^3.1.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
cryptography = "^40.0.2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
coverage = { version = "^7.0.0", extras = ["toml"]}
black = "^23.3.0"
isort = { version = "^5.9.3", extras = ["pyproject"]}
requests = "^2.23.0"

[tool.poetry.scripts]
start = "app.app:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"